# rtl-sdr-recorder

./: .gitignore  app.py  plot.ipynb  pyproject.toml  requirements.txt  rtlsdr_simulated.py  save_raw_data.py  tox.ini
.github/workflows/: ci.yml
rtlsdr_recorder/: __init__.py  analysis.py  cli.py  recorder.py  simulate.py
rtlsdr_recorder/tests/: test_analysis.py  test_cli.py  test_hardware.py  test_recorder.py  test_web.py
rtlsdr_recorder/web/: __init__.py  app.py
rtlsdr_recorder/web/templates/: index.html
templates/: index.html
